fixed search, z-index

--- a/catalog/view/theme/default/stylesheet/common/yes.css
+++ b/catalog/view/theme/default/stylesheet/common/yes.css
@@ -421,7 +421,7 @@ a.btn-link-circle:hover i {
   top: 0px; 
   left: -370px;   
   bottom: 0px;
-  z-index: 9999;
+  z-index: 99;
   color: #fff;
   text-align: center;     
   padding-bottom: 20px;
